2014-02-25  Charles Turner  <chturne@gmail.com>

	* PrimOps.scm (flet, apply, funcall): Move to primitives.lisp
	* primitives.lisp (funcall, minusp, plusp, flet, labels)
	(multiple-value-bind, floor): New procedures.

2014-02-08  Charles Turner  <chturne@gmail.com>

	* PrimsOps.scm (setcar, setcdr): Remove non-CL symbols.
	* primitives.lisp (eql, complement, member, apply): New procedures.

2014-02-08  Charles Turner  <chturne@gmail.com>

	* primitives.lisp (acons, listp, numberp, atom): Added new functions.

2014-02-07  Charles Turner  <chturne@gmail.com>

	* PrimsOps.scm (cdr): Remove.
	* primitives.lisp: Added first, cdr, rest, second, third, nthcdr,
	nth, 1- and 1+.

2014-02-06  Per Bothner  <per@bothner.com>

	* PrimOps.scm (car): Remove.

2014-02-06  Charles Turner  <chturne@gmail.com>

	* primitives.lisp (new file): Make a start on the translation of
	PrimOps.scm to primitives.lisp.
	* Makefile.am: Update accordingly.

2012-12-31  Per Bothner  <per@bothner.com>

	* PrimOps.scm (princ, prin1): New functions.

2012-10-20  Charles Turner <chturne@gmail.com>

	* PrimOps.scm (functionp): Remove brackets from type specifier.

2012-08-13  Charles Turner  <chturne@gmail.com>

	* PrimOps.scm (flet, funcall): New functions.

2008-01-22  Per Bothner  <per@bothner.com>

	*  PrimOps.scm (apply): Update for new Apply class changes.

2008-01-14  Per Bothner  <per@bothner.com>

	* PrimOps.scm (arrayp, stringp): Quote clisp:boolean,
	so the ':' gets passed through to Scheme.getNamedType.

2007-02-18  Per Bothner  <per@bothner.com>

	* PrimOps.scm (make-string, substring, char-to-string): Return FString.

2006-12-20  Per Bothner  <per@bothner.com>

	* Makefile.am: Simplify - we use '$JAVA kawa.repl' rather than $KAWA1.

2006-05-20  Per Bothner  <per@bothner.com>

	* PrimOps.scm (set): Fix typo sym -> symbol.  Use new colon syntax.

2006-02-13  Per Bothner  <per@bothner.com>

	* PrimOps.scm: Quote |<clisp:boolean>| since colon confuses reader.
