@@ -1,3 +1,8 @@
+2015-02-16  Per Bothner  <per@bothner.com>
+
+	* emacs.scm: Update type specifier syntax.
+	(copy-marker): Update call to Marker constructor.
+
 2014-08-06  Per Bothner  <per@bothner.com>
 
 	* Buffer.java (setCharacterAt): New method.
